# grpc

demo/: .gitignore  BUILD  README.md  greeter.djinni  pb.patch  run_djinni.sh
demo/android-client/app/: CMakeLists.txt  build.gradle
demo/android-client/app/src/main/: AndroidManifest.xml
demo/android-client/app/src/main/cpp/: NativeGreeterClient.cpp  NativeGreeterClient.hpp  grpc-demo.cc  grpc-helloworld.cc
demo/android-client/app/src/main/java/com/lxl/demo/gprc/: DemoActivity.java  GreeterClient.java
demo/android-client/app/src/main/java/io/grpc/helloworldexample/cpp/: HelloworldActivity.java
demo/android-client/app/src/main/res/layout/: activity_helloworld.xml  activity_main.xml
demo/android-client/app/src/main/res/values/: strings.xml
demo/cpp-client/: Makefile  demo.grpc.pb.h  demo_client  demo_client.cc  greeter_async_client2.cc  greeter_client.hpp  greeter_client_impl.cc  greeter_client_impl.hpp
demo/cpp-server/: Makefile  dbtest.cc  demo.grpc.pb.cc  demo.pb.cc  demo.pb.h  demo_server  demo_server.cc  greeter_async_server.cc
demo/protos/: demo.proto
